--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-scroll": "^1.15.2",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.1.0",
     "jsonp": "^0.2.1",
     "lyric-parser": "^1.0.1",
     "stylus": "^0.54.7",
